objects/AR17training__c.object
<CustomObject>
    <fields>
        <fullName>Autorabit17topics__c</fullName>
        <complianceGroup>GDPR</complianceGroup>
        <defaultValue>false</defaultValue>
        <label>Autorabit17topics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Demo__c</fullName>
        <label>New Demo</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>completion_date__c</fullName>
        <complianceGroup>HIPAA</complianceGroup>
        <label>completion date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>modules__c</fullName>
        <complianceGroup>HIPAA</complianceGroup>
        <label>modules</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>role</fullName>
                </value>
                <value>
                    <fullName>user</fullName>
                </value>
                <value>
                    <fullName>registering</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>AR17training</label>
    <nameField>
        <label>ARtraining17 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AR17trainings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Validationrule_check1</fullName>
        <active>true</active>
        <errorConditionFormula>Name  = &apos;abc&apos;</errorConditionFormula>
        <errorMessage>please write abc</errorMessage>
    </validationRules>
</CustomObject>